# QML_Music_Player

./: README.md
Music_Player_Demo/: App.cpp  App.qml  AppSystemTrayIcon.qml  CMakeLists.txt  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailPlayListPageView.qml  DetailRecommmendPageView.qml  DetailSearchPageView.qml  Images.qrc  LayoutBottomView.qml  LayoutHeaderView.qml  MainToolButton.qml  MusicBannerView.qml  MusicBorderImage.qml  MusicGridHotView.qml  MusicGridLatestView.qml  MusicIconButton.qml  MusicListView.qml  MusicLyricView.qml  MusicRoundImage.qml  MusicTextButton.qml  PageDetailView.qml  PageHomeView.qml  background.qml  httpmodul.cpp  httpmodul.h  mysetting.cpp  mysetting.h
